--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,12 @@
 [submodule "me/files/vendor/pathogen"]
 	path = me/files/vendor/pathogen
 	url = git://github.com/tpope/vim-pathogen.git
+[submodule "nodejs"]
+	path = nodejs
+	url = git://github.com/puppetlabs/puppetlabs-nodejs.git
+[submodule "apt"]
+	path = apt
+	url = git://github.com/puppetlabs/puppetlabs-apt.git
+[submodule "stdlib"]
+	path = stdlib
+	url = git://github.com/puppetlabs/puppetlabs-stdlib.git
