--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,3 @@
-[submodule "vcsrepo"]
-	path = vcsrepo
-	url = git://github.com/puppetlabs/puppetlabs-vcsrepo.git
-[submodule "me/files/vendor/pathogen"]
-	path = me/files/vendor/pathogen
+[submodule "files/vendor/pathogen"]
+	path = files/vendor/pathogen
 	url = git://github.com/tpope/vim-pathogen.git
-[submodule "nodejs"]
-	path = nodejs
-	url = git://github.com/willdurand/puppet-nodejs.git
-[submodule "apt"]
-	path = apt
-	url = git://github.com/puppetlabs/puppetlabs-apt.git
-[submodule "stdlib"]
-	path = stdlib
-	url = git://github.com/puppetlabs/puppetlabs-stdlib.git
