--- a/files/dotfiles/.npmrc
+++ b/files/dotfiles/.npmrc
@@ -1,2 +1,4 @@
-registry = http://registry.npmjs.eu/
+# When changing registry, run `npm cache clear`
+#registry = http://registry.npmjs.eu/
+registry = http://registry.npmjs.org/
 prefix="/home/julien/.npm-packages"
